fixes #3996: disabled buttons on IE6 are near invisible
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@10011 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/tundra/tundra.css
+++ b/themes/tundra/tundra.css
@@ -47,7 +47,13 @@
 	/*color:#b4b4b4;*/
 	background:#e4e4e4 url("images/buttonDisabled.png") top repeat-x;
 	opacity: 0.30; /* Safari, Opera and Mozilla */
-	filter: gray() alpha(opacity=30) chroma(color=white); /* IE */
+}
+.tundra .dijitButtonDisabled .dijitButtonNode *,
+.tundra .dijitToggleButtonDisabled .dijitButtonNode *,
+.tundra .dijitDropDownButtonDisabled .dijitButtonNode *,
+.tundra .dijitComboButtonDisabled .dijitButtonNode *,
+.tundra .dijitSpinnerDisabled .dijitButtonNode * {
+	filter: gray() alpha(opacity=30); /* IE */
 }
 
 .tundra .dijitButtonHover .dijitButtonNode,
